fix: misplaced scrollbars

--- a/src/Playbook.less
+++ b/src/Playbook.less
@@ -22,11 +22,14 @@
 
 body {
   margin: 0;
-  width: 100vw;
-  height: 100vh;
-  background: var(--theme);
-  color: var(--text);
-  overflow: hidden;
+
+  &.playbook__theater {
+    width: 100vw;
+    height: 100vh;
+    background: var(--theme);
+    color: var(--text);
+    overflow: hidden;
+  }
 
   &.playbook__preview {
     width: auto;
